# wirm

./: .gitignore  Cargo.toml  README.md  test.wasm  test.wat
.github/workflows/: ci.yml  doc.yml  publish.yml  release.yml  rust.yml
src/: error.rs  lib.rs  opcode.rs
src/encode/component/: assign.rs  assign_new.rs  collect.rs  collect_new.rs  collect_new.rs.bk  encode.rs  encode_bk.rs  encode_new.rs  fix_indices.rs  fix_indices_new.rs  idx_spaces.rs  mod.rs
src/ir/: component.rs  function.rs  helpers.rs  id.rs  instr_tests.rs  mod.rs  types.rs  wrappers.rs
src/ir/component/: alias.rs  canons.rs  concrete.rs  idx_spaces.rs  mod.rs  refs.rs  scopes.rs  section.rs  tests.rs  types.rs  visitor.rs  visitor_internal.rs  visitor_old.rs
src/ir/component/visitor/: driver.rs  events_structural.rs  events_topological.rs  mod.rs  resolution_tests.rs  tests.rs  utils.rs
src/ir/module/: mod.rs  module_functions.rs  module_globals.rs  module_imports.rs  module_memories.rs  module_tables.rs  module_types.rs  side_effects.rs  test.rs
src/iterator/: component_iterator.rs  iterator_trait.rs  module_iterator.rs
src/subiterator/: component_subiterator.rs
tests/: func_builder.rs  instrumentation_test.rs  iterator_test.rs  main.rs  round_trip_component.rs  round_trip_module.rs  round_trip_wast.rs  test_module.rs
tests/common/: mod.rs
tests/instrumentation/: component_level.rs  instrumentation_test.rs  mod.rs  test_module.rs
tests/wasm-tools/component-model/: alias.wast  export-introduces-alias.wast  func.wast  gc.wast  import.wast  imports-exports.wast  instance-type.wast  instantiate.wast  module-link.wast  resources.wast  type-export-restrictions.wast  types.wast
tests/wasm-tools/component-model/BUG/: export.wast
tests/wasm-tools/component-model/async/: async-builtins.wast  futures.wast  stackful.wast  streams.wast  task-builtins.wast  threading.wast
(+17 files in other folders)
