[package]
name = "wirm"
version = "1.2.0"
edition = "2021"
authors = ["Suhas Thalanki", "Alex Bai", "Elizabeth Gilbert"]
description = "A lightweight WebAssembly Transformation Library for the Component Model"
readme = "README.md"
homepage = "https://github.com/thesuhas/wirm"
repository = "https://github.com/thesuhas/wirm"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["wasm", "WebAssembly", "instrumentation"]
include = ["src/**/*.rs", "Cargo.toml"]

[dependencies]
log = "0.4.22"
rayon = { version = "1.8", optional = true }
serde_json = "1.0.121"
tempfile = "3.10.1"
wasm-encoder = { version = "0.238.1", features = ["wasmparser"] }
wasmparser = "0.238.1"

[dev-dependencies]
wasmprinter = "0.238.1"
wat = "1.238.1"
wasmtime = "36.0.2"

[features]
default = []
## Enable parallel processing during module parsing and encoding using rayon.
parallel = ["rayon"]
