[package]
name = "wirm"
version = "3.0.0"
edition = "2021"
authors = ["Suhas Thalanki", "Alex Bai", "Elizabeth Gilbert"]
description = "A lightweight WebAssembly Transformation Library for the Component Model"
readme = "README.md"
homepage = "https://github.com/composablesys/wirm"
repository = "https://github.com/composablesys/wirm"
license = "Apache-2.0"
categories = ["wasm"]
keywords = ["wasm", "WebAssembly", "instrumentation"]
include = ["src/**/*.rs", "Cargo.toml"]

[dependencies]
log = "0.4.22"
rayon = { version = "1.8", optional = true }
serde_json = "1.0.121"
tempfile = "3.10.1"
wasm-encoder = { version = "0.244.0", features = ["wasmparser"] }
wasmparser = "0.244.0"

[dev-dependencies]
wasmprinter = "0.244.0"
wat = "1.244.0"
wasmtime = "40.0.0"

[features]
default = []
## Enable parallel processing during module parsing and encoding using rayon.
parallel = ["rayon"]
